--- a/app/src/main/res/color/selsect.xml
+++ b/app/src/main/res/color/selsect.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="#6841E5" android:state_checked="true" />
-    <item android:color="#56000000" />
+    <item android:color="#64DD17" android:state_checked="true" />
+    <item android:color="#4A000000" />
 </selector>
