--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -132,26 +132,9 @@
                 android:layout_marginEnd="10dp"
                 android:textColor="@color/black"
                 android:fontFamily="@font/medium"
-                android:text="-"/>
+                android:text="--"/>
         </androidx.cardview.widget.CardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <!--    navigation fragment-->
-    <LinearLayout
-        android:id="@+id/nav"
-        android:layout_marginBottom="60dp"
-        android:layout_width="match_parent"
-        android:visibility="gone"
-        android:layout_height="match_parent">
-        <fragment
-            android:id="@+id/my_navigation_host"
-            android:name="androidx.navigation.fragment.NavHostFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:defaultNavHost="true"
-            app:navGraph="@navigation/my_navigation" />
-    </LinearLayout>
-    <!--                       -->
 
 
 <!--    home page ning boshlanish kodi-->
@@ -169,10 +152,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#CE8265EF" />
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
             android:orientation="vertical"
             >
 
@@ -180,21 +159,23 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="20dp"
+                android:background="@android:color/transparent"
                 android:layout_weight="1"
                 >
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="wrap_content"
-                    android:layout_height="70dp"
+                    android:layout_height="60dp"
                     android:background="@color/white"
                     app:cardCornerRadius="20dp"
-                    app:cardElevation="10dp"
+                    android:elevation="10dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent">
 
                     <LinearLayout
                         android:layout_width="match_parent"
+                        android:layout_margin="5dp"
                         android:layout_height="match_parent">
 
                         <SearchView
@@ -241,35 +222,25 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="18sp"
+                    android:textSize="26sp"
                     android:textColor="@color/white"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    android:fontFamily="@font/medium"
+                    android:fontFamily="@font/bold_3"
                     android:layout_marginTop="20dp"
-                    android:text="Assalomu Alaykum"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="34sp"
-                    android:textColor="@color/white"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    android:fontFamily="@font/bold"
-                    android:layout_marginTop="50dp"
                     android:text="Yaqindagi\n        Masjidlar"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="0.6"
+                android:layout_weight="0.35"
                 >
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/white"
+                    android:backgroundTint="#FFFFFF"
                     app:cardCornerRadius="40dp"
                     android:layout_marginBottom="-50dp">
 
@@ -308,16 +279,16 @@
                         android:id="@+id/gifImageView"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:padding="50dp"
                         android:background="@color/white"
                         android:layout_marginBottom="110dp"
                         >
 
                     <pl.droidsonroids.gif.GifImageView
                         android:src="@drawable/image_gif"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:scaleType="centerCrop" />
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="100dp"
+                        android:layout_gravity="center"/>
                     </LinearLayout>
 
                 </androidx.cardview.widget.CardView>
@@ -335,5 +306,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
     <!--    home page ning tugash kodi-->
+
+    <!--    navigation fragment-->
+    <FrameLayout
+        android:id="@+id/nav"
+        android:layout_marginBottom="60dp"
+        android:layout_width="match_parent"
+        android:visibility="gone"
+        android:layout_height="match_parent">
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+        <fragment
+            android:id="@+id/my_navigation_host"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/my_navigation" />
+    </FrameLayout>
+    <!--                       -->
 
 </FrameLayout>
